crates/mun_codegen/src/snapshots/test__private_fn_only.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn private_main() {\n    let a = 1;\n}"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

