crates/mun_codegen/src/snapshots/test__return_type_file_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn main():int {\n  0\n}"
---
; ModuleID = 'main.mun'
source_filename = "main.mun"

define i64 @main() {
body:
  ret i64 0
}

