crates/mun_codegen/src/snapshots/test__return_type_group_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn main():int {\n  0\n}"
---
; ModuleID = 'group_name'
source_filename = "group_name"

